add gc tunning